css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text", system-ui, sans-serif;
}

html, body {
  background-color: #121212;
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

